<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanReportActivity">

    <TextView
        android:id="@+id/autoLoans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/autoLoanTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/carInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="goDataEntry"
        android:text="@string/car_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/carPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/carPrice"
        app:layout_constraintEnd_toStartOf="@+id/autoLoans"
        app:layout_constraintTop_toBottomOf="@+id/autoLoans" />

    <TextView
        android:id="@+id/tradeInValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/trade_in_value"
        app:layout_constraintEnd_toEndOf="@+id/downPayment"
        app:layout_constraintTop_toBottomOf="@+id/carPrice" />

    <TextView
        android:id="@+id/salesTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/sales_tax"
        app:layout_constraintEnd_toEndOf="@+id/tradeInValue"
        app:layout_constraintTop_toBottomOf="@+id/tradeInValue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="352dp" />

    <TextView
        android:id="@+id/totalLoanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/total_loan_amount_fixed"
        app:layout_constraintEnd_toEndOf="@+id/salesTax"
        app:layout_constraintStart_toStartOf="@+id/salesTax"
        app:layout_constraintTop_toBottomOf="@+id/salesTax" />

    <TextView
        android:id="@+id/totalInterestPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/total_interest_paid"
        app:layout_constraintEnd_toEndOf="@+id/totalLoanAmount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/totalLoanAmount"
        app:layout_constraintTop_toBottomOf="@+id/totalLoanAmount" />

    <TextView
        android:id="@+id/downPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:text="@string/downpayment"
        app:layout_constraintEnd_toStartOf="@+id/autoLoans"
        app:layout_constraintTop_toBottomOf="@+id/carPrice" />

    <TextView
        android:id="@+id/foundCarPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/carPrice"
        app:layout_constraintTop_toTopOf="@+id/carPrice" />

    <TextView
        android:id="@+id/foundDownPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/foundCarPrice"
        app:layout_constraintStart_toEndOf="@+id/downPayment"
        app:layout_constraintTop_toTopOf="@+id/downPayment" />

    <TextView
        android:id="@+id/foundTradeInValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/foundDownPayment"
        app:layout_constraintStart_toEndOf="@+id/tradeInValue"
        app:layout_constraintTop_toTopOf="@+id/tradeInValue" />

    <TextView
        android:id="@+id/foundSalesTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:text="@string/mod_zero"
        app:layout_constraintEnd_toEndOf="@+id/foundTradeInValue"
        app:layout_constraintStart_toEndOf="@+id/salesTax"
        app:layout_constraintTop_toTopOf="@+id/salesTax" />

    <TextView
        android:id="@+id/foundTotalLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/foundSalesTax"
        app:layout_constraintStart_toEndOf="@+id/totalLoanAmount"
        app:layout_constraintTop_toTopOf="@+id/totalLoanAmount" />

    <TextView
        android:id="@+id/foundTotalInterestPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/foundTotalLoan"
        app:layout_constraintStart_toEndOf="@+id/totalInterestPaid"
        app:layout_constraintTop_toTopOf="@+id/totalInterestPaid" />

    <TextView
        android:id="@+id/textTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/found_total_amount"
        app:layout_constraintEnd_toEndOf="@+id/totalInterestPaid"
        app:layout_constraintTop_toBottomOf="@+id/totalInterestPaid" />

    <TextView
        android:id="@+id/textMonthPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/month_payment_text"
        app:layout_constraintEnd_toEndOf="@+id/textTotalAmount"
        app:layout_constraintTop_toBottomOf="@+id/textTotalAmount" />

    <TextView
        android:id="@+id/foundTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/textTotalAmount"
        app:layout_constraintTop_toTopOf="@+id/textTotalAmount" />

    <TextView
        android:id="@+id/foundMonthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/textMonthPayment"
        app:layout_constraintTop_toTopOf="@+id/textMonthPayment" />

</androidx.constraintlayout.widget.ConstraintLayout>